# restate

./: Cargo.toml  justfile
.github/workflows/: ci.yml  docker.yml
charts/restate-helm/: Chart.yaml
cli/src/clients/: admin_client.rs  admin_interface.rs
crates/admin/: Cargo.toml
crates/bifrost/: Cargo.toml
crates/core/: Cargo.toml
crates/encoding/: Cargo.toml
crates/encoding/derive/: Cargo.toml
crates/encoding/derive/src/: bilrost.rs  lib.rs  message.rs  net.rs
crates/encoding/src/: bilrost_as.rs  common.rs  lib.rs
crates/encoding/src/bilrost_encodings/: nonzero.rs  range.rs
crates/encoding/tests/: bilrost.rs  net_serde.rs
crates/ingress-client/: Cargo.toml
crates/ingress-core/: Cargo.toml
crates/ingress-http/: Cargo.toml
crates/ingress-kafka/: Cargo.toml
crates/invoker-impl/: Cargo.toml
crates/local-cluster-runner/: Cargo.toml
crates/log-server/: Cargo.toml
crates/metadata-providers/: Cargo.toml
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  macros.rs
crates/node/: Cargo.toml
crates/service-client/: Cargo.toml
crates/storage-api/: Cargo.toml  build.rs
crates/storage-datafusion/: Cargo.toml
crates/tracing-instrumentation/: Cargo.toml
crates/types/: Cargo.toml
crates/utoipa/: Cargo.toml
crates/worker/: Cargo.toml
docker/: debug.Dockerfile  debug.Dockerfile.dockerignore
docs/dev/: bilrost-migration-guidelines.md  release.md
server/src/: main.rs
server/tests/: cluster.rs  raft_metadata_cluster.rs  replicated_loglet.rs  trim_gap_handling.rs
tools/restatectl/: Cargo.toml
workspace-hack/: Cargo.toml
(+369 files in other folders)
