[package]
name = "restate-encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bilrost = { workspace = true }
bytes = { workspace = true }
encoding-derive = { version = "0.1.0", path = "derive" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
rand = { workspace = true }
