[package]
name = "restate-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
metrics = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
